[metadata]
name = the-project-manager
version =  0.0.1
author = Eric Credeur
author_email = tidy.song9878@ericcredeur.com
description = A utility for keeping projects in sync across applications.
long_description = file: README.md
long_description_content_type =  text/markdown
url = https://github.com/nandisc/theprojectmanager
project_urls =
    Bug Tracker = https://github.com/nandisc/theprojectmanager/issues
    Documentation = https://github.com/nandisc/theprojectmanager/wiki
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    Natural Language :: English
    License :: OSI Approved :: BSD License
    Topic :: Office/Business
    Topic :: Other/Nonlisted Topic
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
